--- a/web_portfolio/src/banner.css
+++ b/web_portfolio/src/banner.css
@@ -2,7 +2,7 @@
   background-size: cover;
   background-color: #7bacf0;
   text-align: left; 
-  padding: 60px;
+  padding: 70px;
   animation: fadeIn 1s ease-in-out;
 }
 
@@ -16,23 +16,23 @@
 }
 
 .welcome {
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
   color: #333;
 }
 
 .subtitle {
-  font-size: 1.5rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2rem;
+  font-family: sans-serif;
   color: #555;
-  margin-top: 10px;
+  margin-bottom: 1em;
 }
 
-.projects_tab,
 .mailButton,
 .profileButton,
 .phoneButton {
+  font-family: sans-serif;
   display: inline-block;
   padding: 12px 24px;
   background-color: #007bff;
@@ -63,10 +63,17 @@
   width: 360px;
   height: 420px;
   float: right;
-  margin-bottom: 50px;
-  margin-right: 65px;
+  margin-right: 100px;
   border: solid;
   border-radius: 20px;
   border-width: thick;
   border-color: #0056b3;
+  margin-top: 2.2%;
+}
+
+.contactTitle {
+  font-size: 1.5rem;
+  font-family: sans-serif;
+  margin-bottom: 2%;
+  color: #333;
 }
